<resources>
    <string name="app_name">Cooking App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">338782109962163</string>
    <string name="fb_login_protocol_scheme">fb338782109962163</string>

    <string name="logoContentDescription">Logo</string>

    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="rememberme">Remember me</string>
    <string name="title">Title</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <string name="loginIcon">Login Icon</string>

    <string name="TODO">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="saladeString">SALADE</string>
    <string name="fishString">FISH</string>
    <string name="meatString">MEAT</string>
    <string name="soupString">SOUP</string>
    <string name="dessertString">DESSERT</string>

</resources>
