<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.cookapp.fragments.MainFragment"
    android:id="@+id/frament_main">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardElevation="2dp"
                    android:layout_margin="@dimen/card_margin"
                    card_view:cardCornerRadius="@dimen/card_album_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/foodImageBackground1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType = "centerCrop"
                            android:contentDescription="Background image"
                            android:src="@drawable/saladfoodbackground" />

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/saladeString"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/primaryTitle"
                            card_view:fontFamily="cursive" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardElevation="2dp"
                    android:layout_margin="@dimen/card_margin"
                    card_view:cardCornerRadius="@dimen/card_album_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/foodImageBackground2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType = "centerCrop"
                            android:contentDescription="Background image"
                            android:src="@drawable/fishfoodbackground"/>

                        <TextView
                            android:id="@+id/title2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/fishString"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/primaryTitle"
                            card_view:fontFamily="cursive" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardElevation="2dp"
                    android:layout_margin="@dimen/card_margin"
                    card_view:cardCornerRadius="@dimen/card_album_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/foodImageBackground3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType = "centerCrop"
                            android:contentDescription="Background image"
                            android:src="@drawable/meatfoodbackground"/>

                        <TextView
                            android:id="@+id/title3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/meatString"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/primaryTitle"
                            card_view:fontFamily="cursive" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardElevation="2dp"
                    android:layout_margin="@dimen/card_margin"
                    card_view:cardCornerRadius="@dimen/card_album_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/foodImageBackground4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType = "centerCrop"
                            android:contentDescription="Background image"
                            android:src="@drawable/soupbackgroundimage"/>

                        <TextView
                            android:id="@+id/title4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/soupString"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/primaryTitle"
                            card_view:fontFamily="cursive" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardElevation="2dp"
                    android:layout_margin="@dimen/card_margin"
                    card_view:cardCornerRadius="@dimen/card_album_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/foodImageBackground5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType = "centerCrop"
                            android:contentDescription="Background image"
                            android:src="@drawable/dessertbackgroundimage"/>

                        <TextView
                            android:id="@+id/title5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/dessertString"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/primaryTitle"
                            card_view:fontFamily="cursive" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

</ScrollView>

</FrameLayout>